--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,7 @@
 Limit:
   max: 7000
   min: 500
+  chunk: 100
 
 Time: 3600
 
@@ -13,15 +14,18 @@ Message:
   bossBar: true
 
 Rules:
-  mode: true
-  black:
-  white:
-  item:
-    enable: true
+  mode: true      #模组实体不参与 monster 和 animals 的判断匹配
+  rename: true    #清理命名实体 （仅对原版实体生效）
+  black:          #黑名单
+    - monster
+  white:          #白名单
+    - animals
+  item:           #掉落物
+    enable: true  #开启掉落物清理
 
 #世界独立规则
   custom:
-    #world:    #世界名称
+    world:    #世界名称
       #black:
       #white:
       #item:
