--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,4 +1,25 @@
 prefix: "&b[ClearEntity]"
+reload: "%prefix% &a配置文件重载完成"
 Clear:
-  beforeInfo: "%prefix% &b服务器娘还有 &e%TIME% &b秒后到达战场"
+  beforeInfo: "%prefix% &a服务器娘还有 &e%TIME% &a秒后到达战场"
   complete: "%prefix% &a哎哟，这次清理了 &c%ITEMCOUNT% &a个垃圾和 &c%COUNT%个 &a怪蜀黍，我感觉自己萌萌哒~"
+BossBar:
+  Title: "%prefix% &a实体和掉落物将在 &e%TIME%秒 &a后清除"
+
+
+
+
+help: |-
+  - &a[ClearEntity] &e帮助-------------------#
+  - &b/ClearEntity clear <entity/item>
+  - &e立即执行一次清理任务 <实体/掉落物>
+  - &b/ClearEntity search <chunk/entity/list>
+  - &e[list]查询所有世界中所存在的实体
+  - &e[chunk]查询当前世界区块中的实体数量
+  - &e[entity]查询当前世界某实体所在区块及数量
+  - &b/ClearEntity open
+  - &e打开服务器垃圾箱
+  - &b/ClearEntity reload
+  - &e重新载入配置文件
+  - &e#------------------------------------#
+  - &a命令简写模式: /ce
